Fix layout issues

--- a/0x06-responsive_design/02-1-styles.css
+++ b/0x06-responsive_design/02-1-styles.css
@@ -193,7 +193,7 @@ template {
 }
 
 /* Variables
-  ============================= */
+    ============================= */
 
 :root {
     --color-primary: #D73953;
@@ -275,7 +275,7 @@ template {
 }
 
 /* Base
-      ============================= */
+        ============================= */
 
 *,
 *:before,
@@ -352,7 +352,12 @@ a:active {
 }
 
 /* Helpers
-      ============================= */
+        ============================= */
+
+main img {
+    width: 100%;
+    height: auto;
+}
 
 .visually-hidden:not(:focus):not(:active) {
     position: absolute !important;
@@ -366,7 +371,7 @@ a:active {
 /*** 2. LAYOUT ***/
 
 /* Layout
-      ============================= */
+        ============================= */
 
 .container {
     max-width: 960px;
@@ -375,7 +380,29 @@ a:active {
 }
 
 /* Grid
-      ============================= */
+        ============================= */
+
+@media screen and (max-width: 767px) {
+    :root {
+        --section-padding: 5rem 1.5rem;
+        --section-body-padding: 2rem 0 0;
+    }
+
+    ul.row,
+    .row {
+        flex-direction: column;
+        margin: 0;
+    }
+
+    [class*='col-'] {
+        margin: 0 0 3rem 0;
+    }
+
+    .col-1-3,
+    .col-1-2 {
+        width: 100%;
+    }
+}
 
 ul.row {
     margin: -1rem;
@@ -400,7 +427,13 @@ ul.row {
 }
 
 /* Navbar
-      ============================= */
+        ============================= */
+
+@media screen and (max-width: 767px) {
+    .navbar-menu {
+        display: none;
+    }
+}
 
 .nav {
     margin: 0;
@@ -449,7 +482,7 @@ ul.row {
 }
 
 /* Header
-      ============================= */
+        ============================= */
 
 .header {
     padding: var(--header-padding);
@@ -465,7 +498,7 @@ ul.row {
 }
 
 /* Footer
-      ============================= */
+        ============================= */
 
 .footer {
     --nav-item-font-weight: normal;
@@ -498,7 +531,7 @@ ul.row {
 /*** 3. SECTION ***/
 
 /* Section (all styles)
-      ============================= */
+        ============================= */
 
 .section {
     padding: var(--section-padding);
@@ -535,7 +568,7 @@ ul.row {
 }
 
 /* Section theming
-      ============================= */
+        ============================= */
 
 [data-section-theme="dark"] {
     --button-color: var(--color-white);
@@ -545,7 +578,7 @@ ul.row {
 }
 
 /* Section HERO
-      ============================= */
+        ============================= */
 
 .section-hero {
     position: relative;
@@ -554,7 +587,7 @@ ul.row {
 
 .hero-homepage {
     background-image: url(images/banner-home.jpg);
-    background-position: 65% 8rem;
+    background-position: 65% 8;
     background-repeat: no-repeat;
     background-size: 90rem auto;
 }
@@ -581,21 +614,27 @@ ul.row {
 }
 
 /* Section Latest news
-      ============================= */
+        ============================= */
+
+@media screen and (max-width: 767px) {
+    .section-latest-news .row {
+        flex-direction: column;
+    }
+}
 
 .section-latest-news .row {
     flex-direction: row-reverse;
 }
 
 /* Section SERVICES
-      ============================= */
+        ============================= */
 
 .section-services .row {
     flex-wrap: wrap;
 }
 
 /* Section ABOUT US
-      ============================= */
+        ============================= */
 
 .section-about-us [class*='col-'] {
     align-self: center;
@@ -604,14 +643,14 @@ ul.row {
 /*** 4. CARD ***/
 
 /* Card (all styles)
-      ============================= */
+        ============================= */
 
 .card-category {
     color: var(--color-primary);
 }
 
 /* Card WORK
-      ============================= */
+        ============================= */
 
 .card-work .card-outer {
     position: relative;
@@ -676,7 +715,7 @@ ul.row {
 }
 
 /* Card SERVICES
-      ============================= */
+        ============================= */
 
 .card-services .card-title {
     margin: 0;
@@ -697,7 +736,7 @@ ul.row {
 }
 
 /* Card TESTIMONIAL
-      ============================= */
+        ============================= */
 
 .card-testimonial {
     text-align: center;
@@ -732,7 +771,7 @@ ul.row {
 /*** ARTICLE PAGE ***/
 
 /* Section HERO (article)
-      ============================= */
+        ============================= */
 
 .hero-article {
     background-size: 150rem 100rem;
@@ -767,7 +806,7 @@ ul.row {
 }
 
 /* Post
-      ============================= */
+        ============================= */
 
 .post {
     display: flex;
@@ -802,7 +841,7 @@ ul.row {
 }
 
 /* Post Meta
-      ============================= */
+        ============================= */
 
 .post-meta-list {
     flex-direction: column;
@@ -829,7 +868,7 @@ ul.row {
 }
 
 /* Tag list
-      ============================= */
+        ============================= */
 
 .tag-list {
     padding: 0;
@@ -851,7 +890,7 @@ ul.row {
 /*** FORM ***/
 
 /* Comment section
-      ============================= */
+        ============================= */
 
 .post-comments {
     width: 80%;
@@ -864,7 +903,7 @@ ul.row {
 }
 
 /* Basic form
-      ============================= */
+        ============================= */
 
 form {
     display: flex;
@@ -919,7 +958,7 @@ textarea:focus {
 }
 
 /* Form group
-      ============================= */
+        ============================= */
 
 .form-group {
     padding: 1rem;
@@ -933,7 +972,7 @@ textarea:focus {
 }
 
 /* Form field
-      ============================= */
+        ============================= */
 
 .form-field-container {
     position: relative;
@@ -944,7 +983,7 @@ textarea:focus {
 }
 
 /* Form help
-      ============================= */
+        ============================= */
 
 .form-group .form-help {
     margin: 0;
@@ -963,7 +1002,7 @@ textarea:focus {
 }
 
 /* Form error handling
-      ============================= */
+        ============================= */
 
 input:not(:placeholder-shown)~.form-field-icon::after {
     height: 100%;
